# gitrs

./: Cargo.toml  README.md
src/: cli.yml  hasher.rs  lib.rs  main.rs  rep.rs
src/index/: mod.rs  parse_index.rs
src/objects/: blob.rs  commit.rs  mod.rs  tree.rs
test_data/: f2
test_data/d1/d1d/: d1df
